--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="assets/styles/style.css">
    <link rel="stylesheet" href="/assets/styles/media-query.css">
-   <title>Login</title>
+   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+   <title>Tela de Login</title>
 </head>
 <body>
    <main>
@@ -16,8 +17,20 @@
          <div id="formulario">
             <h1>Login</h1>
             <p>Seja bem vindo(a). Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-            <form action="login.php" method="post">
-               
+            <form action="login.php" method="post" autocomplete="on">
+               <div class="campo">
+                  <i class="material-icons">person</i>
+                  <input type="email" name="login" id="login" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                  <label for="login">Login</label>
+               </div>
+
+               <div class="campo">
+                  <i class="material-icons">vpn_key</i>
+                  <input type="password" name="senha" id="senha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                  <label for="senha">Senha</label>
+               </div>
+               <input type="submit" value="Entrar">
+               <a href="esqueci-a-senha.html">Esquecia a Senha <i class="material-icons" >mail</i></a>
             </form>
          </div>
       </section>
