--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <label for="senha">Senha</label>
                </div>
                <input type="submit" value="Entrar">
-               <a href="esqueci-a-senha.html">Esquecia a Senha <i class="material-icons" >mail</i></a>
+               <a href="esqueci-a-senha.html" class="button">Esquecia a Senha <i class="material-icons" >mail</i></a>
             </form>
          </div>
       </section>
